--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#">Navbar</a>
+  <a class="navbar-brand">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,20 +43,20 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#">Link</a>
+        <a class="nav-link">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link disabled"  tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <a class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#">Action</a>
-          <a class="dropdown-item" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#">Another action</a>
-          <a class="dropdown-item" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/#">Something else here</a>
+          <a class="dropdown-item">Action</a>
+          <a class="dropdown-item">Another action</a>
+          <a class="dropdown-item">Something else here</a>
         </div>
       </li>
     </ul>
