servicios actor y peliculas

--- a/src/app/pages/tabla-pelicula/tabla-pelicula.component.html
+++ b/src/app/pages/tabla-pelicula/tabla-pelicula.component.html
@@ -1,4 +1,4 @@
-<h1 class="display-3">Tabla pelicula!</h1>
+<h1 class="display-3">Tabla peliculas!</h1>
 
 <p>Alta e imperdible seleccion de movies. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam natus porro excepturi in, dolores ut quos ipsam voluptatibus nam impedit aliquid illo neque ad rerum. Magnam voluptatem dolor sapiente ducimus?</p>
 <p><a class="btn btn-primary btn-lg" role="button" id="btnVerMas" (click)="VerTabla()">{{verMas}}</a></p>
