--- a/src/app/pages/busqueda/busqueda.component.html
+++ b/src/app/pages/busqueda/busqueda.component.html
@@ -1,26 +1,63 @@
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand">Laboratorio IV</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <!-- Main jumbotron for a primary marketing message or call to action -->
-  <div class="jumbotron">
-    <div class="container">
-      <app-tabla-pelicula (seleccionada)="Seleccion($event)"></app-tabla-pelicula>
-       </div>
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="CambiarEntidad('peliculas')">Peliculas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="CambiarEntidad('actores')" >Actores</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" >Login</a>
+      </li>
+    </ul>
   </div>
+</nav>
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+  <div class="container" [ngSwitch]="entidad">
+    <app-tabla-pelicula *ngSwitchCase="'peliculas'" (seleccionada)="Seleccion($event)"></app-tabla-pelicula>
+    <app-tabla-actores *ngSwitchCase="'actores'" (actorNuevo)="GetActorNuevo($event)"></app-tabla-actores>
+  </div>
+</div>
 
-  <div class="container">
-    <!-- Example row of columns -->
-    <div class="row">
+<div class="container">
+  <!-- Example row of columns -->
+  <div class="row">
+    <div class="col-md-4">
+      <app-detalle-pelicula [pelicula]="pelicula"></app-detalle-pelicula>
+    </div>
+    <div class="col-md-4">
+      <app-alta-actores (actorNuevo)="GetActorNuevo($event)"></app-alta-actores>
       <div class="col-md-4">
-          <app-detalle-pelicula [pelicula]="pelicula"></app-detalle-pelicula>
-      </div>
-      <div class="col-md-4">
-        <app-alta-actores></app-alta-actores>
-      </div>
-      <div class="col-md-4">
-          <app-tabla-paises></app-tabla-paises>
+        <app-tabla-paises></app-tabla-paises>
       </div>
     </div>
-
+    
     <hr>
-
+    
   </div> <!-- /container -->
-
+  
+  
+  <!-- </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+    <div class="dropdown-menu" aria-labelledby="dropdown01">
+      <a class="dropdown-item">Action</a>
+      <a class="dropdown-item">Another action</a>
+      <a class="dropdown-item">Something else here</a>
+    </div>-->
