--- a/src/app/pages/busqueda/busqueda.component.html
+++ b/src/app/pages/busqueda/busqueda.component.html
@@ -14,7 +14,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" (click)="CambiarEntidad('actores')" >Actores</a>
-      </li>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/foro" >Foro</a>
+        </li>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -52,7 +57,7 @@
     
   </div> <!-- /container -->
   
-  
+  <router-outlet></router-outlet>
   <!-- </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
