--- a/src/app/pages/alta-actores/alta-actores.component.html
+++ b/src/app/pages/alta-actores/alta-actores.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!actor">
 
 
-  <button class="btn btn-lg btn-warning btn-block" (click)="Nuevo()">Nuevo </button>
+  <button class="btn btn-lg btn-warning btn-block" (click)="Nuevo()">Nuevo Actor</button>
 
 
 </div>
@@ -55,15 +55,13 @@
 
     <div class="row">
       <div class="col-md-5 mb-3">
-        <label for="country">Country</label>
-        <select class="custom-select d-block w-100" id="country" required="">
-          <option value="">Choose...</option>
-          <option>United States</option>
-        </select>
-        <div class="invalid-feedback">
+        <label for="country">Country: </label>
+        {{pais}}
+        <!-- <div *ngIf="!pais">
           Please select a valid country.
-        </div>
-      </div>
+
+      </div> -->
+        
     </div>
 
     <hr class="mb-4">
